--- a/frontend/sakai-ng/src/app/demo/components/uikit/moradores/filedemo.component.html
+++ b/frontend/sakai-ng/src/app/demo/components/uikit/moradores/filedemo.component.html
@@ -42,8 +42,36 @@
                             <label for="senha"> Senha Provisória </label>
                             <input pInputText id="senha" [(ngModel)]="morador.senha_usuario" placeholder="Senha Provisória" type="text" />
                         </div>
-                        <div class="col-12 md:col-6">
+                        <div class="col-12 md:col-4">
                             <button pButton (click)="addMoradores()" class="p-button-rounded p-button-success" style="text-transform: uppercase;" label="Salvar"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12" *ngIf="divModify">
+                <div class="card">
+                    <h2 class="text-gray-600"> Editar Morador </h2> <hr>
+                    <div class="p-fluid p-formgrid grid">
+                        <div class="field col-12 md:col-4">
+                            <label for="firstname2"> Nome completo </label>
+                            <input pInputText id="firstname2" [(ngModel)]="morador.nome_pessoa" placeholder="Nome" type="text" />
+                        </div>
+                        <div class="field col-12 md:col-4">
+                            <label for="lastname2"> Telefone </label>
+                            <p-inputMask mask="999999999" [(ngModel)]="morador.telefone_pessoa" placeholder="(+244) 999-999-999"></p-inputMask>
+                        </div>
+                        <div class="field col-12 md:col-4">
+                            <label for="email"> Email  </label>
+                            <input pInputText id="email" [(ngModel)]="morador.email" placeholder="Email" type="text" />
+                        </div>
+                        <div class="field col-12 md:col-4">
+                            <label for="bi"> Bilhete  </label>
+                            <input pInputText id="bi" [(ngModel)]="morador.bi_pessoa" placeholder="Bilhete" type="text" />
+                        </div>
+                        
+                        <div class="col-12 md:col-4">
+                            <button pButton (click)="salvarEditar()" class="p-button-rounded p-button-success" style="text-transform: uppercase;" label="Salvar"></button>
                         </div>
                     </div>
                 </div>
@@ -53,7 +81,7 @@
                 <button [loading]="loading[0]" (click)="toggleNewDiv()" (click)="load(0)" pButton label="{{ isNewDiv ? 'Mostrar a Tabela' : 'Novo morador' }}" style="text-transform: uppercase;" class="p-button-rounded mb-2" icon="pi pi-plus"></button>
             </div>  
             
-            <p-table [value]="listaMoradores" *ngIf="!isNewDiv" dataKey="id_morador" [paginator]="true" [rowsPerPageOptions]="[10, 25, 50]" #dt1 [rows]="10" [globalFilterFields]="['id_pessoa', 'nome_pessoa', 'telefone_pessoa', 'bi_pessoa', 'endereco_id', 'status_id', 'status']">
+            <p-table [value]="listaMoradores" *ngIf="!isNewDiv" dataKey="id_morador" [paginator]="true" [rowsPerPageOptions]="[10, 25, 50]" #dt1 [rows]="10" [globalFilterFields]="['fk_unidad','id_pessoa', 'nome_pessoa', 'telefone_pessoa', 'bi_pessoa', 'endereco_id', 'status_id', 'status']">
                 <ng-template pTemplate="caption">
                     <div class="flex justify-content-between flex-column sm:flex-row">
                         <button pButton label="Gerar PDF" icon="pi pi-spin pi-spinner" (click)="gerarPDF()" class="p-button-secondary"> <i class="pi pi-download mr-2"></i> </button>
@@ -112,9 +140,9 @@
 						<td style="font-size: 16px;"> {{ morador.telefone_pessoa }} </td>
 						<td style="font-size: 16px;"> {{ morador.nome_unidade }} </td>
 						<td>
-							<button title="Editar os dados do Morador" pButton class="mr-2 p-button-success"  (click)="showModal = true"><i class="pi pi-pencil"></i></button>
+							<button title="Editar os dados do Morador" pButton class="mr-2 p-button-success"  (click)="abrirJanelaEditar(morador)"><i class="pi pi-pencil"></i></button>
 	  
-							<button title="Desativar conta" pButton (click)="eliminarPorteiro(listaPorteiros.id_porteiro)" class="p-button-danger" ><i class="pi pi-lock"></i></button>
+							<button title="Desativar conta" pButton (click)="eliminarMorador(morador.id_morador)" class="p-button-danger" ><i class="pi pi-lock"></i></button>
 						  </td>
                     </tr>
                 </ng-template>
